--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </div>
 
                 <!-- BMI Calculator -->
-                <div class="bg-gray-50 rounded-lg p-6 shadow-md hover:shadow-xl transition border border-gray-200">
+                <!-- <div class="bg-gray-50 rounded-lg p-6 shadow-md hover:shadow-xl transition border border-gray-200">
                     <div class="w-12 h-12 bg-red-100 rounded-lg flex items-center justify-center mb-4">
                         <i class="fas fa-heartbeat text-red-600 text-2xl"></i>
                     </div>
@@ -223,7 +223,7 @@
                     <a href="bmi-calculator.html" class="inline-block bg-red-600 text-white px-6 py-2 rounded-lg hover:bg-red-700 transition">
                         Ouvrir <i class="fas fa-arrow-right ml-2"></i>
                     </a>
-                </div>
+                </div> -->
 
                 <!-- Word Counter -->
                 <div class="bg-gray-50 rounded-lg p-6 shadow-md hover:shadow-xl transition border border-gray-200">
